tests/fixtures/invalid/max_set_list.py
# Cannot call max() with Set[int], List[int]
x = max({1, 2, 3}, [1, 2, 3])
